--- a/PalladiumDwh.DWapi/Views/Shared/_Layout.cshtml
+++ b/PalladiumDwh.DWapi/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
-                    <li><a href="./swagger">API</a></li>
+                    <li><a href="~/swagger">API</a></li>
                 </ul>
             </div>
         </div>
